"language" = "English";

"common.and" = "and";
"common.new" = "New";

"actions.delete" = "Delete";
"actions.cancel" = "Cancel";
"actions.save" = "Save";
"actions.paste" = "Paste";
"actions.continue_action" = "Continue";
"actions.done" = "Done";
"actions.edit" = "Edit";
"actions.copy" = "Copy";
"actions.sign_out" = "Sign Out";
"actions.more" = "More";
"actions.ok" = "OK";
"actions.open" = "Open";
"actions.hide_nft" = "Hide NFT";
"actions.hide_collection" = "Hide Collection";
"actions.hide_and_report_spam" = "Hide and Report Spam";
"actions.view_on" = "View on %@";
"actions.burn_nft" = "Burn NFT";
"actions.confirm.title" = "Confirm";
"actions.confirm.subtitle" = "Swipe right";

"state.failed" = "Failed";

"result.success" = "Done";
"result.failure" = "Error";
...
"backup.warning.title" = "Attention";
"backup.warning.caption" = "Please read the following carefully before viewing your recovery phrase.";
"backup.warning.list.item1" = "Never enter your recovery phrase any other place than TOS to access your wallet.";
"backup.warning.list.item2" = "TOS Support never asks for a recovery phrase.";
"backup.warning.list.item3" = "Anyone with your recovery phrase can use your wallet.";

"backup.show.title" = "Recovery phrase";
"backup.show.caption" = "Write down these words with their numbers and store them in a safe place.";
"backup.show.button.title" = "Copy Phrase";
"backup.show.button.trc20" = "Export TRC20 Wallet";

"backup.trc20.show.title" = "TRC20 Wallet";
"backup.trc20.show.caption" = "Write down these words with their numbers and store them in a safe place.";
...
"backup.trc20.show.button.title" = "Copy Phrase";

"backup.check.title" = "Recovery phrase";
"backup.check.caption" = "Write down these words with their numbers and store them in a safe place.";
"backup.check.button.title" = "Check Backup";

"backup.check.input.title" = "Backup Check";
"backup.check.input.caption" = "Let's see if you've got everything right. Enter words %d, %d, and %d.";
"backup.check.input.button.title" = "Done";

"security.title" = "Security";
"security.use" = "Use %@";
"security.change_passcode" = "Change Passcode";
...
"confirm_send.risk.caption_without_nft" = "The total value of tokens you’re sending.";
"confirm_send.risk.nft_caption" = "The total value of tokens you’re sending. NFT will also be sent.";
"confirm_send.risk.nft_multiple_caption" = "The total value of tokens you’re sending. NFTs will also be sent.";
"confirm_send.risk.action_button_title" = "OK";
"confirm_send.failed_emulation_warning.title" = "After confirmation, anything can happen, including losing all your funds. All transactions are irreversible. We couldn’t emulate the transaction and don’t know what will happen next.";

"customize_wallet.title" = "Customize your Wallet";
"customize_wallet.description" = "Wallet name and icon are stored locally on your device.";
"customize_wallet.input_placeholder" = "Wallet Name";
"customize_wallet.default_wallet_name" = "Wallet";

"connection_status.updating" = "Updating";
"connection_status.no_internet" = "No Internet connection";
"connection_status.updated_at" = "Updated %@";

...
"token.unverified_popup.low_liquidity" = "Low liquidity. Token may have some value, but it is extremely low.";
"token.unverified_popup.not_listed" = "Token is not listed on trading platforms and has limited demand.";
"token.unverified_popup.used_for_spam" = "Used for spam. Employed for sending unwanted and often irrelevant messages at scale.";
"token.unverified_popup.used_for_scam" = "Used for scam. Token's name or image can lead users into deception.";

"onboarding.caption" = "Create a new wallet or add an existing one";
"onboarding.buttons.create_new" = "Create New Wallet";
"onboarding.buttons.import_existing" = "Import Existing Wallet";
"onboarding.backup_intro.title" = "Back up your recovery phrase";
"onboarding.backup_intro.caption" = "Without it, you won’t be able to access your wallet";
"onboarding.backup_intro.later" = "Later";
"onboarding.notifications.title" = "Get instant notifications";
"onboarding.notifications.caption" = "Get notified when you receive TOS, tokens and NFTs";
"onboarding.notifications.button_title" = "Enable Notifications";
"onboarding.terms.caption" = "By continuing, you agree to our %@";
"onboarding.terms.title" = "Terms of Use";

"passcode.create" = "Create passcode";
"passcode.reenter" = "Re-enter passcode";
"passcode.enter" = "Enter passcode";
"passcode.logout" = "Log Out";
"passcode.logout_confirmation_title" = "🚧 🚨🚨🚨 🚧\nSign Out of All Wallets?";
"passcode.logout_confirmation_description" = "This will erase keys to all wallets. Make sure you have backed up your recovery phrases.";

"import_wallet.title" = "Enter recovery phrase";
"import_wallet.description" = "To restore access to your wallet, enter the 24 or 12 secret recovery words given to you when you created your wallet.";
...
"choose_wallets.tokens" = "tokens";
"choose_wallets.alreadyAdded" = "Already added";

"finish_setup.title" = "Finish setting up";
"finish_setup.setup_biometry" = "Use %@ to approve transactions";
"finish_setup.biometry_unavailable" = "Biometry unavailable";
"finish_setup.backup.title" = "Back up your recovery phrase";
"finish_setup.backup.description" = "Without it, you can’t restore your wallet";

"wallets_list.title" = "Wallets list";
"wallets_list.add_wallet" = "Add Wallet";

"add_wallet.title" = "Add Wallet";
...
