...
        if case .withdraw = sendInput { return }
        didTapPicker?(wallet, item)
    }

    func didTapRecipientPasteButton() {
        let environment = ProcessInfo.processInfo.environment
        let pasteboardString = environment["TOS_UI_TEST_RESET"] != nil
            ? environment["TOS_UI_TEST_SEND_RECIPIENT"]
            : UIPasteboard.general.string
        guard let pasteboardString else { return }
        didInputRecipient(pasteboardString)
        didUpdateRecipient?(pasteboardString)
    }

    func didTapCommentPasteButton() {
        let environment = ProcessInfo.processInfo.environment
        let pasteboardString = environment["TOS_UI_TEST_RESET"] != nil
            ? environment["TOS_UI_TEST_SEND_COMMENT"]
            : UIPasteboard.general.string
        guard let pasteboardString else { return }
        didInputComment(pasteboardString)
        didUpdateComment?(pasteboardString)
    }

...
